spade-tests/src/snapshots/spade_tests__ast_lowering__const_generics_in_impl_block_typecheck_correctly.snap
---
source: spade-tests/src/ast_lowering.rs
---
impl<#uint N> uint<N> {
    fn twice(self) -> uint<{N + 2}> {
        self + self
    }

    fn times<#uint M>(self, other: uint<M>) -> uint<{N + M + 1}> {
        self * other
    }
}

fn test() {
    let x = 5u8.twice();
    let y = 5u8.times(2u10);
}


error: Expected type 9, got 10
  ┌─ testinput:2:29
  │  
2 │       fn twice(self) -> uint<{N + 2}> {
  │                               ^^^^^ Expected 9, got 10
  │ ╭─────────────────────────────────────'
3 │ │         self + self
4 │ │     }
  │ ╰─────' The error occurred when unifying types here
  │  
  = note: Expected: 9
                in: 9
               Got: 10
                in: 10
  = The error is in a generic unit instantiated at
    ╰ testinput:12 impl#15::twice<8>

error: Expected type 18, got 19
  ┌─ testinput:6:54
  │  
6 │       fn times<#uint M>(self, other: uint<M>) -> uint<{N + M + 1}> {
  │                                                        ^^^^^^^^^ Expected 18, got 19
  │ ╭──────────────────────────────────────────────────────────────────'
7 │ │         self * other
8 │ │     }
  │ ╰─────' The error occurred when unifying types here
  │  
  = note: Expected: 18
                in: 18
               Got: 19
                in: 19
  = The error is in a generic unit instantiated at
    ╰ testinput:13 impl#15::times<10, 8>
